unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/FSL_PriorityCode_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FSL PriorityCode Mapping</label>
</CustomObject>