unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/fields/Schedule_over_Lower_Priority_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Schedule_over_Lower_Priority_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule over Lower Priority Appointment</label>
    <type>Checkbox</type>
</CustomField>