unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>