unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/fields/WorkOrder_Priority__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Priority__c</fullName>
    <label>WorkOrder Priority</label>
    <length>18</length>
    <type>Text</type>
</CustomField>