unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/listViews/Enhanced.listView-meta.xml
<ListView>
    <fullName>Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>WorkOrder_Priority__c</columns>
    <columns>Priority_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Enhanced</label>
</ListView>