unpackaged/main/default/objects/FSL_PriorityCode_Mapping__c/listViews/Priority_Mapping.listView-meta.xml
<ListView>
    <fullName>Priority_Mapping</fullName>
    <columns>NAME</columns>
    <columns>WorkOrder_Priority__c</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Priority_Description__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>Schedule_over_Lower_Priority_Appointment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Priority Mapping</label>
</ListView>